# leo_desktop-ros2

.github/workflows/: ci-foxy.yml  ci-humble.yml  ci.yml
leo_desktop/: CHANGELOG.rst  package.xml
leo_viz/: CHANGELOG.rst  package.xml
leo_viz/launch/: rviz.launch.py  view_model.launch.py  view_model.launch.xml
leo_viz/rviz/: robot.rviz
